Upgrade to Eclipse 2022-12
Closes gh-352